<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Main">

        <TextView
            android:id="@+id/Temperatura"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/titulo1"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/lnl1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="uno"
                android:text="@string/bt1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/bt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="dos"
                android:text="@string/bt2"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="tres"
                android:text="@string/bt3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/bt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cuatro"
                android:text="@string/bt4"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/Area"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="AREA"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/lnl3"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cinco"
                android:text="@string/bt5"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/bt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="seis"
                android:text="@string/bt6"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl4"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="siete"
                android:text="@string/bt7"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ocho"
                android:text="@string/bt8"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>