<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Conversion"
    android:background="#0b1b24">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Conversion">

        <TextView
            android:id="@+id/Unidad"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/conTitu"
            android:textSize="25dp"
            android:textAlignment="center"
            android:textColor="#a3dce8"/>

        <EditText
            android:id="@+id/tx1"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:ems="10"
            android:hint="@string/conNum"
            android:inputType="number"
            android:textColor="#a3dce8"
            android:textSize="25dp" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="Calcular"
            android:text="@string/conBt"
            android:textSize="20dp"
            android:background="#24647a"
            android:textColor="#a3dce8"/>

        <TextView
            android:id="@+id/Resultado"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/conRes"
            android:textColor="#a3dce8"
            android:textAlignment="center"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"

            android:textColor="#a3dce8"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="281dp"
            android:ems="10"
            android:gravity="start|top"
            android:textColor="#a3dce8"
            android:textAlignment="center"
            android:inputType="textMultiLine" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>